fixed problem with old getTagName. moved to new getName
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/branches/transition@456 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/components/CodeAnalyzer/DESCRIPTION
+++ b/components/CodeAnalyzer/DESCRIPTION
@@ -4,6 +4,9 @@ This information are available for further processing as array structure.
 Analyzed files aren't included in current process space. Instead they are
 processed in a distinct process space.
 
+To prevent execution of unsave code a custom php.ini is provided to the
+sandboxed process disabling all unnecessary functions.
+
 Furthermore, it provides a class loader which checks files for syntax errors and
 includes all valid files.
 This is used to get all necessary class/function definitions into a process
