worked on code_analyzer.php
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/branches/transition@467 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/components/CodeAnalyzer/src/php.ini
+++ b/components/CodeAnalyzer/src/php.ini
@@ -20,7 +20,7 @@ variables_order = "GPCS"
 error_reporting = E_ALL
 allow_call_time_pass_reference = Off
 
-
+error_prepend_string = "##ERR##"
 
 ;;;;;;;;;;;;;;;;;;;;
 ; Language Options ;
@@ -32,7 +32,7 @@ asp_tags = Off
 precision    =  14
 y2k_compliance = On
 zlib.output_compression = Off
-implicit_flush = Off
+implicit_flush = On
 
 unserialize_callback_func=
 serialize_precision = 100
@@ -50,7 +50,7 @@ safe_mode_protected_env_vars = LD_LIBRARY_PATH
 ; This directive allows you to disable certain functions for security reasons.
 ; It receives a comma-delimited list of function names. This directive is
 ; *NOT* affected by whether Safe Mode is turned On or Off.
-disable_functions = create_function, com_event_sink, com_load_typelib, com_get_active_object, ftp_connect, odbc_connect, preg_match_all, preg_replace, preg_replace_callback, preg_split, preg_grep, session_save_path, spl_classes, spl_autoload, spl_autoload_extensions, spl_autoload_register, spl_autoload_unregister, spl_autoload_functions, spl_autoload_call, sleep, usleep, flush, phpinfo, phpversion, phpcredits, printf, vprintf, vsprintf, fprintf, vfprintf, sscanf, fscanf, unlink, exec, system, passthru, shell_exec, proc_open, getenv, putenv, parse_ini_file, move_uploaded_file, gethostbyaddr, gethostbyname, gethostbynamel, dl, popen, rmdir, umask, fread, fopen, fpassthru, ftruncate, mkdir, rename, copy, tempnam, tmpfile, file, file_get_contents, file_put_contents, stream_select, stream_context_create, stream_socket_client, stream_socket_server, stream_socket_accept, stream_set_write_buffer, set_file_buffer, set_socket_blocking, fsockopen, pfsockopen, crypt, opendir, closedir, chdir, getcwd, rewinddir, readdir, dir, scandir, chown, chgrp, chmod, touch, mail, ezmlm_hash, openlog, syslog, readgzfile, gzread, gzopen, gzpassthru, gzwrite, gzputs, gzfile, dom_import_simplexml, simplexml_load_file, simplexml_load_, xml_parser_create, xml_parse, xmlwriter_open_uri, xmlwriter_open_memory
+disable_functions = create_function, com_event_sink, com_load_typelib, com_get_active_object, ftp_connect, odbc_connect, preg_match_all, preg_replace, preg_replace_callback, preg_split, preg_grep, session_save_path, spl_classes, spl_autoload, spl_autoload_extensions, spl_autoload_register, spl_autoload_unregister, spl_autoload_functions, spl_autoload_call, sleep, usleep, phpinfo, phpversion, phpcredits, printf, vprintf, vsprintf, fprintf, vfprintf, sscanf, fscanf, unlink, exec, system, passthru, shell_exec, proc_open, getenv, putenv, parse_ini_file, move_uploaded_file, gethostbyaddr, gethostbyname, gethostbynamel, dl, popen, rmdir, umask, fread, fopen, fpassthru, ftruncate, mkdir, rename, copy, tempnam, tmpfile, file, file_get_contents, file_put_contents, stream_select, stream_context_create, stream_socket_client, stream_socket_server, stream_socket_accept, stream_set_write_buffer, set_file_buffer, set_socket_blocking, fsockopen, pfsockopen, crypt, opendir, closedir, chdir, getcwd, rewinddir, readdir, dir, scandir, chown, chgrp, chmod, touch, mail, ezmlm_hash, openlog, syslog, readgzfile, gzread, gzopen, gzpassthru, gzwrite, gzputs, gzfile, dom_import_simplexml, simplexml_load_file, simplexml_load_, xml_parser_create, xml_parse, xmlwriter_open_uri, xmlwriter_open_memory
 
 ; This directive allows you to disable certain classes for security reasons.
 ; It receives a comma-delimited list of class names. This directive is
